--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:migrate": "npx prisma migrate dev",
+    "db:studio": "npx prisma studio",
+    "db:reset": "prisma migrate reset && prisma migrate dev"
+  },
+  "prisma": {
+    "schema": "lib/db/schema.prisma"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
+    "@prisma/client": "^6.5.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "next": "^15.2.1",
     "next-auth": "^4.24.11",
-    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
     "uuid": "^11.1.0",
     "v4": "^0.0.1",
     "zod": "^3.24.2"
@@ -24,6 +33,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4"
   }
 }
