--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.5.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cva": "^0.0.0",
     "lucide-react": "^0.479.0",
     "next": "^15.2.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.25",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
