--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "schema": "lib/db/schema.prisma"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.5.0",
     "class-variance-authority": "^0.7.1",
@@ -26,6 +27,7 @@
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
     "uuid": "^11.1.0",
     "v4": "^0.0.1",
